data/derived/sp14/progs/unify/prog2205.ml.out
Characters 173-182:
  | Average (ex1,ex2) -> ((exprToString (ex1,x,y)+.exprToString (ex2,x,y))/.2)
                                        ^^^^^^^^^
Error: This expression has type 'a * 'b * 'c
       but an expression was expected of type expr
